- Added a new folder for js files - Fixed logo not showing on the create acc page

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ a {
 
 .account-icon {
   width: 60px;
+  height: 60px;
   margin-top: 10px ;
 }
 
